# discord-mediaplayer-rpc

./: Cargo.toml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: coverage.yml
src/: main.rs
