[package]
name = "discord-mediaplayer-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.6"
dbus-tokio = "0.7.5"
discord-presence = "0.5.18"
# discord-rich-presence = "0.2.3"
# discord-rpc-client = { version = "0.3.0", features = ["rich_presence"]}
futures = "0.3.25"
stream-cancel = "0.8.1"
tokio = { version = "1.22.0", features = ["full"]}
